<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/pageBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/userNameTextView"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="Тут будет ваше имя"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="Что сегодня будете кушать?"
        android:textColor="@color/grayColor"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shop_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/userIconView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/user_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorForView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userIconView" />

    <TextView
        android:id="@+id/editingTextView"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/profile_editing"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/userIconView" />

    <ImageView
        android:id="@+id/favIconView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/about_program_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/aboutProgramTextView"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/about_program"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/favIconView"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorForView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favIconView" />

    <ImageView
        android:id="@+id/bellIconView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bell_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <TextView
        android:id="@+id/pushNotificationsTextView"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/push_notifications"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/bellIconView"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <View
        android:layout_width="44dp"
        android:layout_height="25dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/check_item"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <com.jtv7.rippleswitchlib.RippleSwitch
        android:id="@+id/rippleSwitch"
        android:layout_width="37dp"
        android:layout_height="21dp"
        android:layout_marginEnd="16dp"
        android:background="@color/smsp_transparent_color"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        app:rs_checked="true"
        app:rs_checked_color="@color/pageBackground"
        app:rs_unchecked_color="@color/yellowColor" />


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorForView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bellIconView" />


    <ImageView
        android:id="@+id/orderImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/burger_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/orderTextView"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/order_history"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/orderImageView"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorForView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderImageView" />

    <ImageView
        android:id="@+id/exitImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/logout_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/exitTextView"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/exit"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/exitImageView"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorForView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exitTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>